--- a/index.html
+++ b/index.html
@@ -29,8 +29,17 @@
     // ❗ Notes
     // 🧠 Try using destructuring to grab a reference to the first element of the array
     // 🧠 Try using the at method of arrays to grab the last element
-    const swapper = () => {
+    const swapper = (array) => {
+      if (array.length < 2) {
+        return "No swap performed"
+      }
+      let [first] = array
+      let last = array.at(-1)
 
+      array[0] = last
+      array[array.length -1] = first
+
+      return array
     }
 
     // 👉 CHALLENGE 2
@@ -46,8 +55,9 @@
     // 🧠 Try using the ternary operator instead of a conditional statement when deciding what to return.
     // 🧠 So instead of doing `if ('foo') return 'bar' else return 'baz'` do `return 'foo' ? 'bar' : 'baz'`
     // 🧠 The above recommendations allow to write the whole function body in just two clean lines!
-    const headAndTail = () => {
-
+    const headAndTail = (array) => {
+      let [head, ...tail] = array
+      return array.length === 0 ? 'This array is empty' : [head, tail]
     }
 
     // 👉 CHALLENGE 3
@@ -59,8 +69,8 @@
     // devGreet(false, false) // should return "Hey, I am a backend dev and I am sad"
     // ❗ Notes
     // 🧠 Use ternary expressions to construct the string.
-    const devGreet = () => {
-
+    const devGreet = (isFrontend, isHappy) => {
+      return `Hey, I am a ${isFrontend ? 'frontend' : 'backend'} dev and I am ${isHappy ? 'happy' : 'sad'}`
     }
 
     // 👉 CHALLENGE 4
@@ -72,8 +82,9 @@
     // recognize({}) // should return "Hidden Person Rocks!"
     // ❗ Notes
     // 🧠 Try using destructuring to grab the name, and a return followed by a ternary expression.
-    const recognize = () => {
-
+    const recognize = (user) => {
+      let {name} = user
+      return name ? `${name} Rules!` : 'Hidden Person Rocks!'
     }
 
     // 👉 CHALLENGE 5
@@ -83,9 +94,7 @@
     // processBooleans([1, 0, 0, 1, 0]) // should return ["Y", "N", "N", "Y", "N"]
     // ❗ Notes
     // 🧠 Using map, arrow function syntax, and the ternary, you can make this function a short one-liner
-    const processBooleans = () => {
-
-    }
+    const processBooleans = (bools) => bools.map(bool => bool ? 'Y' : 'N')
 
     // 👉 CHALLENGE 6
     // 🧠 The function reverseString takes a string as its argument, and returns it reversed.
@@ -97,8 +106,14 @@
     // 🧠 Split the string but do not use the reverse method of arrays. Let's do it manually.
     // 🧠 We suggest using a for loop. Research how to loop backwards over an array, starting at the last element.
     // 🧠 Use a ternary in the return statement.
-    const reverseString = () => {
-
+    const reverseString = (str) => {
+      let splitStr = str.split('')
+      let result = []
+      for (let i = splitStr.length -1; i >= 0; i--) {
+        let letter = splitStr[i]
+        result.push(letter)
+      }
+      return result.join('') === str ? "It's a palindrome!" : result.join('')
     }
 
     // 👉 CHALLENGE 7
@@ -113,8 +128,17 @@
     // ❗ Notes
     // 🧠 Even though object properties have no particular order, to avoid confusing
     // the test runner, please set in each object first name, then age, and finally jsLover.
-    const zip = () => {
-
+    const zip = (names, years, jsLovers) => {
+      let result = [];
+      names.forEach((name, i) => {
+        let person = {
+          name: names[i],
+          born: years[i],
+          jsLover: jsLovers[i]
+        }
+        result.push(person)
+      })
+      return result
     }
 
     // 🧪 TESTS, do not work below this line
